Updated z-index for Issue #250

--- a/src/css/ogrid-theme-blue.css
+++ b/src/css/ogrid-theme-blue.css
@@ -304,7 +304,7 @@ div#ogrid-dataset-filters.panel-body,  div#ogrid-geo-filters.panel-body {
     height: 80px;
     width: 100%;
     opacity: 1.0;
-    z-index: 8000;
+    z-index: 800;
 }
 
 /* Size when the advanced tabs header breaks */
